--- a/src/index.css
+++ b/src/index.css
@@ -359,34 +359,25 @@ social media
   display: flex;
 }
 
-.icon-button i {
-  color: white;
-}
-.icon-button {
-  margin-bottom: 10px;
-}
-
 .icon-button {
   border-radius: 2.6rem;
   cursor: pointer;
   display: inline-block;
   font-size: 1.3rem;
   height: 2.6rem;
+  padding: 2px;
   line-height: 2.6rem;
-  margin: 0 5px;
-  position: relative;
-  text-align: center;
+  margin: 5px;
   width: 2.6rem;
-  margin-bottom: 10px;
-}
-
-.socialIcon {
+  position: relative;
   background: var(--clr-primary);
   color: var(--clr-bcg);
+  text-align: center;
+  margin-bottom: 10px;
   transition: all 0.2s ease-in-out;
 }
 
-.socialIcon:hover {
+.icon-button:hover {
   color: rgba(255, 255, 255, 1);
   box-shadow: 0 5px 15px var(--clr-primary);
 }
@@ -465,18 +456,11 @@ Card
   margin-bottom: 20px;
 }
 
-.link-icons * {
-  width: 50px;
-  height: 30px;
-  margin-top: 30px;
-  color: var(--clr-primary);
-}
-
-.link-icons * :hover {
-  transition: 0.2s;
-  width: 53px;
-  height: 33px;
-  margin-top: 30px;
+.link-icons {
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+  
 }
 
 .project-info {
@@ -645,6 +629,11 @@ courses
   height: 200px;
   border: 1px solid var(--clr-primary);
   cursor: pointer;
+  transition: 0.1s;
+}
+
+.course-card:hover{
+  border-color: var(--clr-font);
 }
 
 .course-info {
